Es_A_CASO/SO/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:52:43 **** Incremental Build of configuration Debug for project 3 - ExecExample ****
make all 
Building file: ../src/ExecExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ExecExample.d" -MT"src/ExecExample.o" -o "src/ExecExample.o" "../src/ExecExample.c"
../src/ExecExample.c: In function ‘main’:
../src/ExecExample.c:45:12: warning: implicit declaration of function ‘wait’ [-Wimplicit-function-declaration]
   45 |    if((pid=wait(NULL))<0)
      |            ^~~~
Finished building: ../src/ExecExample.c
 
Building target: 3 - ExecExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "3 - ExecExample" ./src/ExecExample.o   -lso2016 -lm
Finished building target: 3 - ExecExample
 
13:52:49 **** Incremental Build of configuration Debug for project 3 - ExecExample ****
make all 
make: Nothing to be done for 'all'.
13:53:03 **** Incremental Build of configuration Debug for project 3 - ExecExample ****
make all 
Building file: ../src/ExecExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ExecExample.d" -MT"src/ExecExample.o" -o "src/ExecExample.o" "../src/ExecExample.c"
../src/ExecExample.c: In function ‘main’:
../src/ExecExample.c:46:12: warning: implicit declaration of function ‘wait’ [-Wimplicit-function-declaration]
   46 |    if((pid=wait(NULL))<0)
      |            ^~~~
Finished building: ../src/ExecExample.c
 
Building target: 3 - ExecExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "3 - ExecExample" ./src/ExecExample.o   -lso2016 -lm
Finished building target: 3 - ExecExample
 
08:46:17 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
08:54:50 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
08:56:38 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
09:04:58 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
09:05:32 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
09:06:36 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
09:08:09 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
09:08:45 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
09:10:43 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
../src/PipeExample.c: In function ‘main’:
../src/PipeExample.c:25:2: error: ‘fd’ undeclared (first use in this function)
   25 |  fd = open("exec.log", O_WRONLY | O_APPEND| O_CREAT | O_TRUNC, 0644);
      |  ^~
../src/PipeExample.c:25:2: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:20: src/PipeExample.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
09:11:00 **** Incremental Build of configuration Debug for project 4 - PipeExample ****
make all 
Building file: ../src/PipeExample.c
Invoking: GCC C Compiler
gcc -I/usr/local/include -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/PipeExample.d" -MT"src/PipeExample.o" -o "src/PipeExample.o" "../src/PipeExample.c"
Finished building: ../src/PipeExample.c
 
Building target: 4 - PipeExample
Invoking: GCC C Linker
gcc -L/usr/local/lib -o "4 - PipeExample" ./src/PipeExample.o   -lso2016 -lm
Finished building target: 4 - PipeExample
 
